Standardize text-content and boxed areas
More consistency!

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -12,9 +12,9 @@
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
 
     <div class="meta">
-        <div class="boxed">
+        <div class="text-content">
             <h2>{model.introHeading}</h2>
-            <p data-html="introParagraph" skip="true"></p>
+            <div data-html="introParagraph" skip="true"></div>
         </div>
     </div>
 
