--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div if="model.belowHeader" class="wrapper">
-        <div class="boxed">
+        <div class="text-content">
             <div class="below-header-text">{model.belowHeader.text}</div>
             <div class="buttons">
                 <a each="b in model.belowHeader.buttons" class="btn {b.colorScheme}" href="{b.url}">
