--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -105,5 +105,5 @@
             <detail-block skip="true"></detail-block>
         </div>
     </div>
-    <div class="boxed form-container" skip="true"></div>
+    <div class="text-content form-container" skip="true"></div>
 </template>
