--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -11,6 +11,7 @@
 
     .hero {
         color: color(neutral-lightest);
+        line-height: 1.67;
         padding: 4em 0;
         position: relative;
 
@@ -37,6 +38,14 @@
             opacity: 0.1;
         }
 
+        .text-content {
+            align-items: flex-start;
+
+            @include desktop {
+                align-items: center;
+            }
+        }
+
         h1 {
             color: inherit;
             font-size: 4.8rem;
@@ -45,7 +54,7 @@
         }
 
         p {
-            max-width: none;
+            margin: 0;
         }
 
         .recurring-section {
@@ -83,16 +92,14 @@
         }
     }
 
-    h2 {
+    .instructions {
+        font-size: 1.7rem;
+        padding: 8rem 1.5rem 4rem;
         text-align: center;
     }
 
-    .boxed {
-        padding: 0 1rem;
-
-        @include desktop {
-            padding: 0 11.5rem;
-        }
+    h2 {
+        text-align: center;
     }
 
     .amount-boxes {
@@ -115,16 +122,19 @@
             display: flex;
             flex-flow: row wrap;
             justify-content: center;
-            width: 100%;
 
             [type="submit"] {
                 background-color: color(gold);
+                flex-basis: 50%;
                 padding: 2rem 5rem;
-                width: 50%;
 
                 @include phone {
-                    width: 100%;
+                    flex-basis: 100%;
                 }
+            }
+
+            .boxed {
+                padding: 0;
             }
         }
 
@@ -203,6 +213,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        width: 100%;
 
         .col {
             flex-basis: calc(50% - 2rem);
@@ -217,18 +228,15 @@
         padding: 2rem;
     }
 
+    .cta-container {
+        margin: 1rem 0;
+        width: 100%;
+    }
+
     .cta {
         background-color: color(orange);
         color: color(neutral-lightest);
         margin-bottom: 7rem;
-    }
-
-    .text-content {
-        padding: 8rem 0 15rem;
-
-        &.subhead {
-            padding: 2rem 0;
-        }
     }
 
     .share-buttons {
@@ -241,5 +249,6 @@
 
     .testing-only {
         padding-left: 1.5rem;
+        width: 100%;
     }
 }
