--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="hero">
-        <div class="container">
+        <div class="container text-content">
             <h1>{model.title}</h1>
             <p>{model.page_description}</p>
             <p class="logo-text">OpenStax Partners are identified around the web with the OpenStax Ally logo.</p>
