--- a/src/app/pages/tos/tos.html
+++ b/src/app/pages/tos/tos.html
@@ -1,8 +1,8 @@
 <template args="model">
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-    <main id="maincontent" class="boxed">
+    <main id="maincontent" class="text-content left-justified">
         <h1>{model.intro_heading}</h1>
-    
+
         <div class="plain">
             <p class="text" data-html="terms_of_service_content" skip="true"></p>
         </div>
