--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -4,6 +4,7 @@ $breakpoints: (
     wide-desktop: 1024px
 );
 
+$text-width: 100rem;
 $boxed-width: 1200px; // For @media, 120rem != 1200px
 
 @function breakpoints($breakpoint) {
