--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -15,26 +15,25 @@ $phone-up: #{breakpoints(phone) + 1};
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 0 auto;
-    max-width: 120rem;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
     position: relative;
+    width: 100%;
 
     @include desktop {
         flex-flow: row nowrap;
-        padding: 8rem 1.5rem;
+        padding: 8rem 0;
     }
 
     .quote-bucket {
-        align-items: stretch;
         background-color: color(neutral-lightest);
         display: flex;
-        flex: 0 0 100%;
+        flex: 0 1 100%;
         flex-flow: column nowrap;
-        margin-bottom: 1.5rem;
+        margin: 0.75rem 1.5rem;
         min-height: 20rem;
 
         @include desktop {
-            margin-bottom: 0;
+            margin: 0.75rem 1.5rem;
             min-width: 31rem;
         }
 
@@ -145,7 +144,7 @@ $phone-up: #{breakpoints(phone) + 1};
     &.boxes-2 {
         > .quote-bucket {
             @include desktop {
-                flex-basis: 48%;
+                flex-basis: calc(50% - 1.5rem);
             }
         }
     }
@@ -153,7 +152,8 @@ $phone-up: #{breakpoints(phone) + 1};
     &.boxes-3 {
         > .quote-bucket {
             @include desktop {
-                flex-basis: 32%;
+                flex-basis: 33.33%;
+                margin: 0 1.5rem;
             }
         }
     }
