--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -120,70 +120,75 @@
         }
     }
 
-    .pinned .article {
+    .pinned {
         width: 100%;
 
-        @include wide-desktop {
-            flex-flow: row nowrap;
-            margin-bottom: 0;
-            padding: 2.5rem 0;
-        }
-
-        h2 {
-            @include desktop {
-                font-size: 3.6rem;
-                letter-spacing: -0.2rem;
-                line-height: 4rem;
-                margin-top: 2rem;
-            }
-
-            @include wide-desktop {
-                margin-top: 0;
-            }
-        }
-
-        h3 {
-            @include desktop {
-                font-size: 2.1rem;
-            }
-        }
-
-        .body {
-            font-size: 1.8rem;
-            height: 15rem;
-            max-height: 15rem;
-            overflow: hidden;
-        }
-
-        .go-to {
-            font-size: 1.4rem;
-        }
-
-        .img {
-            background-size: cover;
-            flex-basis: 100%;
-            height: 32rem;
-
-            @include wide-desktop {
-                flex-basis: 50%;
-                margin-right: 3rem;
-            }
-        }
-
-        img {
+        .article {
             width: 100%;
-        }
-
-        .content {
-            flex-basis: 100%;
-            max-width: 100%;
 
             @include wide-desktop {
-                flex-basis: 50%;
-                max-width: 50%;
+                flex-flow: row nowrap;
+                margin-bottom: 0;
+                padding: 2.5rem 0;
+            }
+
+            h2 {
+                @include desktop {
+                    font-size: 3.6rem;
+                    letter-spacing: -0.2rem;
+                    line-height: 4rem;
+                    margin-top: 2rem;
+                }
+
+                @include wide-desktop {
+                    margin-top: 0;
+                }
+            }
+
+            h3 {
+                @include desktop {
+                    font-size: 2.1rem;
+                }
+            }
+
+            .body {
+                font-size: 1.8rem;
+                height: 15rem;
+                max-height: 15rem;
+                overflow: hidden;
+            }
+
+            .go-to {
+                font-size: 1.4rem;
+            }
+
+            .img {
+                background-size: cover;
+                flex-basis: 100%;
+                height: 32rem;
+
+                @include wide-desktop {
+                    flex-basis: 50%;
+                    margin-right: 3rem;
+                }
+            }
+
+            img {
+                width: 100%;
+            }
+
+            .content {
+                flex-basis: 100%;
+                max-width: 100%;
+
+                @include wide-desktop {
+                    flex-basis: 50%;
+                    max-width: 50%;
+                }
             }
         }
     }
+
 
 
     .articles .container {
@@ -194,6 +199,7 @@
             display: block;
             flex-basis: 100%;
             max-width: 100%;
+            width: 100%;
 
             @include desktop {
                 flex-basis: calc(50% - 3rem);
