--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -18,7 +18,10 @@
         }
 
         .boxed {
+            display: block;
+
             @include desktop {
+                display: flex;
                 flex-flow: row wrap;
                 padding: 0;
             }
@@ -26,12 +29,6 @@
             .search {
                 margin: 0 auto;
             }
-        }
-
-        .container {
-            display: flex;
-            flex-flow: row wrap;
-            width: 100%;
         }
     }
 
@@ -108,6 +105,7 @@
 
         .disqus {
             padding: 4rem 0 0;
+            width: 100%;
         }
 
         .articles .boxed {
@@ -130,7 +128,7 @@
 
         @include phone {
             align-items: center;
-            flex-direction: column;
+            display: block;
             padding-left: 1.5rem;
             text-align: center;
         }
