--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <div class="boxed">
+        <div class="boxed left-justified">
             <div class="col">
                 <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
                 <form class="form" action="https://www.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8"
