--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -1,10 +1,12 @@
 <template args="model">
     <if condition="model.page2">
+        <div class="instructions text-content">
+            {`Please enter your information and click "Continue" to be taken to the secure payment site.
+             OpenStax is based at Rice, but your donation will go directly to OpenStax. Once your payment
+             is submitted, you will receive payment confirmation and a gift receipt from Rice University.`}
+        </div>
         <form class="form-horizontal" role="form" method="post" action="{model.touchnet().url}">
-            <div class="text-content">
-                <div class="text-content subhead">
-                    {`Please enter your information and click "Continue" to be taken to the secure payment site. OpenStax is based at Rice, but your donation will go directly to OpenStax. Once your payment is submitted, you will receive payment confirmation and a gift receipt from Rice University.`}
-                </div>
+            <div class="boxed">
                 <div class="testing-only" if="model.useTestingSite">
                     <label>
                         <input id="use-testing-site" type="checkbox"
@@ -438,7 +440,7 @@
         <div class="hero">
             <div class = "background-overlay"></div>
             <div class="background-image"></div>
-            <div class="boxed">
+            <div class="text-content">
                 <h1>{model.headline}</h1>
                 <p>{model.subhead}</p>
                 <if condition="model.amounts && model.queryStringHandled">
@@ -460,7 +462,7 @@
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <div class="boxed" if="model.otherPaymentHeading">
+        <div class="text-content" if="model.otherPaymentHeading">
             <h2>{model.otherPaymentHeading}</h2>
             <hr />
             <div class="row">
@@ -477,9 +479,9 @@
                 </div>
             </div>
             <hr />
-            <p>
+            <div class="cta-container">
                 <a href="/contact?subject=Donations" class="btn cta">{model.giveCtaText}</a>
-            </p>
+            </div>
         </div>
         <div>
           <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
