--- a/src/app/pages/higher-ed/higher-ed.html
+++ b/src/app/pages/higher-ed/higher-ed.html
@@ -15,7 +15,7 @@
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
         <div class="quote-buckets hide-until-loaded {model.loaded}">
-            <div class="boxed" skip="true"></div>
+            <div class="boxed-row" skip="true"></div>
         </div>
         <div id="getting-started" class="getting-started hide-until-loaded {model.loaded}">
             <div class="container boxed">
@@ -61,6 +61,6 @@
         </div>
 
         <div class="products" skip="true"></div>
-        <div class="buckets" skip="true"></div>
+        <div class="buckets boxed-row" skip="true"></div>
     </main>
 </template>
