--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -1,27 +1,25 @@
 <template args="model">
-    <div class="container" data-html="page_description" skip="true"></div>
+    <div class="hero text-content" data-html="page_description" skip="true"></div>
 
     <div class="strips-and-filter">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="filter {model.filterIsSticky ? 'sticky': ''}" skip="true"></div>
     </div>
     <div class="books">
-        <div class="container" skip="true"></div>
-        <div class="feature-block">
-            <div class="container" if="model.dev_standard_1_heading">
-                <h2>About Our Textbooks</h2>
-                <div class="blurb">
-                    <h3 class="title">{model.dev_standard_1_heading}</h3>
-                    <p class="text" data-html="dev_standard_1_description" skip="true"></p>
-                </div>
-                <div class="blurb">
-                    <h3 class="title">{model.dev_standard_2_heading}</h3>
-                    <p class="text" data-html="dev_standard_2_description" skip="true"></p>
-                </div>
-                <div class="blurb">
-                    <h3 class="title">{model.dev_standard_3_heading}</h3>
-                    <p class="text" data-html="dev_standard_3_description" skip="true"></p>
-                </div>
+        <div class="boxed container" skip="true"></div>
+        <h2 class="text-content">About Our Textbooks</h2>
+        <div class="boxed-row feature-block" if="model.dev_standard_1_heading">
+            <div class="blurb">
+                <h3 class="title">{model.dev_standard_1_heading}</h3>
+                <p class="text" data-html="dev_standard_1_description" skip="true"></p>
+            </div>
+            <div class="blurb">
+                <h3 class="title">{model.dev_standard_2_heading}</h3>
+                <p class="text" data-html="dev_standard_2_description" skip="true"></p>
+            </div>
+            <div class="blurb">
+                <h3 class="title">{model.dev_standard_3_heading}</h3>
+                <p class="text" data-html="dev_standard_3_description" skip="true"></p>
             </div>
         </div>
     </div>
