Use label-value pairs for Adopt/Interest form roles

--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -22,8 +22,8 @@
         display: flex;
         justify-content: center;
         margin: auto;
-        max-width: 50rem;
         padding: 0 1.5rem;
+        width: 30rem;
 
         > label {
             flex-basis: 100%;
