Fix form layout problems in IE

--- a/src/app/components/student-form/student-form.html
+++ b/src/app/components/student-form/student-form.html
@@ -1,14 +1,14 @@
 <template args="model">
-    <component data-id="popup" skip="true"></component>
+    <plug-in data-id="popup" skip="true"></plug-in>
     <form action="{model.postUrl}" method="post" class="text-content">
         <div class="row">
             <div class="col">
-                <component data-id="firstName" skip="true"></component>
-                <component data-id="lastName" skip="true"></component>
+                <plug-in data-id="firstName" skip="true"></plug-in>
+                <plug-in data-id="lastName" skip="true"></plug-in>
             </div>
             <div class="col">
-                <component data-id="email" skip="true"></component>
-                <component data-id="school" skip="true"></component>
+                <plug-in data-id="email" skip="true"></plug-in>
+                <plug-in data-id="school" skip="true"></plug-in>
             </div>
         </div>
         <div class="cta">
