--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -9,29 +9,29 @@
             <input type="hidden" name="Role__c" value="{model.userRole}">
         </div>
         <div class="text-content">
-            <component data-id="contactInfo" skip="true"></component>
+            <plug-in data-id="contactInfo" skip="true"></plug-in>
         </div>
         <div class="wrapper">
             <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
 
             <div class="text-content labeled-inputs row book-info">
                 <div id="primary-book" class="col">
-                    <component data-id="yourBook" skip="true"></component>
+                    <plug-in data-id="yourBook" skip="true"></plug-in>
                     <p>
                         Don't see your book? Fill out our <a href="/interest">interest form</a>.
                     </p>
 
-                    <component data-id="adoptionStatus" skip="true"></component>
-                    <component data-id="howMany" skip="true"></component>
-                    <component data-id="partnerResources" skip="true"></component>
-                    <component data-id="otherPartner" skip="true"></component>
-                    <component data-id="otherInstructors" skip="true"></component>
+                    <plug-in data-id="adoptionStatus" skip="true"></plug-in>
+                    <plug-in data-id="howMany" skip="true"></plug-in>
+                    <plug-in data-id="partnerResources" skip="true"></plug-in>
+                    <plug-in data-id="otherPartner" skip="true"></plug-in>
+                    <plug-in data-id="otherInstructors" skip="true"></plug-in>
                 </div>
 
                 <div class="col">
-                    <component data-id="partnerContact" skip="true"></component>
-                    <component data-id="featureMe" skip="true"></component>
-                    <component data-id="contactMe" skip="true"></component>
+                    <plug-in data-id="partnerContact" skip="true"></plug-in>
+                    <plug-in data-id="featureMe" skip="true"></plug-in>
+                    <plug-in data-id="contactMe" skip="true"></plug-in>
 
                     <label>
                         Any feedback you'd like to share with us?
