--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -4,7 +4,7 @@
         <span data-html="introDescription" skip="true"></span>
     </div>
     <div class="text-content">
-        <component data-id="selectedRole" skip="true"></component>
+        <plug-in data-id="selectedRole" skip="true"></plug-in>
     </div>
-    <component data-id="form" skip="true"></component>
+    <plug-in data-id="form" skip="true"></plug-in>
 </template>
