--- a/src/app/pages/interest/teacher-form/teacher-form.html
+++ b/src/app/pages/interest/teacher-form/teacher-form.html
@@ -9,7 +9,7 @@
             <input type="hidden" name="Role__c" value="{model.userRole}">
         </div>
         <div class="text-content">
-            <component data-id="contactInfo" skip="true"></component>
+            <plug-in data-id="contactInfo" skip="true"></plug-in>
         </div>
 
         <div class="wrapper">
@@ -17,14 +17,14 @@
             <div class="text-content labeled-inputs row book-info">
 
                 <div class="col">
-                    <component data-id="whichBook" skip="true"></component>
-                    <component data-id="howMany" skip="true"></component>
-                    <component data-id="partnerContact" skip="true"></component>
+                    <plug-in data-id="whichBook" skip="true"></plug-in>
+                    <plug-in data-id="howMany" skip="true"></plug-in>
+                    <plug-in data-id="partnerContact" skip="true"></plug-in>
                 </div>
 
                 <div class="col">
 
-                    <component data-id="hearAbout" skip="true"></component>
+                    <plug-in data-id="hearAbout" skip="true"></plug-in>
 
                     <label id="other-source" class="hidden">
                         Other:
