--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -9,7 +9,7 @@
             <input type="hidden" name="oid" value="00DU0000000Kwch">
             <input type="hidden" name="lead_source" value="Adoption Form">
         </div>
-        <component data-id="selectedRole" skip="true"></component>
+        <plug-in data-id="selectedRole" skip="true"></plug-in>
     </div>
-    <component data-id="form" skip="true"></component>
+    <plug-in data-id="form" skip="true"></plug-in>
 </template>
