--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -35,7 +35,7 @@
                     <label>
                         Your Message
                         <span class="invalid-message">{model.validationMessage('description')}</span>
-                        <textarea cols="50" name="description" rows="6" required></textarea>
+                        <textarea cols="50" name="description" rows="6" required skip="true"></textarea>
                     </label>
                     <input type="submit" value="Send" class="btn btn-orange">
                 </form>
