--- a/src/app/pages/interest/teacher-form/teacher-form.html
+++ b/src/app/pages/interest/teacher-form/teacher-form.html
@@ -34,7 +34,7 @@
 
                     <label>
                         Do you have any feedback you'd like to share with us?
-                        <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
+                        <textarea cols="50" name="00NU00000056Rls" rows="4" skip="true"></textarea>
                     </label>
 
                     <div class="cta">
