--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -137,7 +137,7 @@
                     <label>
                         Do you have any feedback you'd like to share? <small><i>(optional)</i></small>
                         <span class="invalid-message">{model.validationMessage('00NU00000056Rls')}</span>
-                        <textarea cols="50" name="00NU00000056Rls" rows="10"></textarea>
+                        <textarea cols="50" name="00NU00000056Rls" rows="10" skip="true"></textarea>
                     </label>
 
                     <div class="cta">
