--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -19,6 +19,10 @@ $table-dark-row: #f6f6f6;
         }
     }
 
+    .file-name {
+        margin-left: 1rem;
+    }
+
     .question {
         font-size: 1.8rem;
         font-weight: bold;
