--- a/src/styles/components/radio-buttons.scss
+++ b/src/styles/components/radio-buttons.scss
@@ -33,8 +33,8 @@ $custom-radio-disabled-pip-color:   rgba(color(cyan), 0.40);
     -webkit-appearance: none;
     border-radius: 100%;
     display: inline-block;
+    height: 2rem;
     outline: none;
-    vertical-align: middle;
     width: $custom-radio-size;
 
     // Radio
