Keep copyright date evergreen

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -38,7 +38,7 @@
             </p>
 
             <p>
-                © 1999-2016, Rice University. Except where otherwise noted,
+                © 1999-{(new Date()).getYear()+1900}, Rice University. Except where otherwise noted,
                 textbooks on this site are licensed under a Creative Commons Attribution
                 4.0 International License.
             </p>
