--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -10,7 +10,7 @@
         <div class="boxed left-justified">
             <div class="col">
                 <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-                <form class="form" action="https://www.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8"
+                <form class="form" action="https://{model.salesforceHome}/servlet/servlet.WebToCase?encoding=UTF-8"
                 target="form-response" method="post">
                     <input type="hidden" name="orgid" value="00DU0000000Kwch">
                     <input type="hidden" name="external" value="1">
