--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -486,7 +486,7 @@
         <div>
           <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
           <form id="donation-update" accept-charset="UTF-8" class="form" target="form-response"
-           action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
+           action="https://{model.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
               <input type="hidden" name="oid" value="00DU0000000Kwch">
               <input type="hidden" name="lead_source" value="Donation">
               <input type="hidden" name="first_name">
