--- a/src/app/pages/interest/teacher-form/teacher-form.html
+++ b/src/app/pages/interest/teacher-form/teacher-form.html
@@ -1,6 +1,6 @@
 <template args="model">
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-    <form accept-charset="UTF-8" action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
+    <form accept-charset="UTF-8" action="https://{model.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8"
      target="form-response" class="new_adoption_interest form" method="post">
         <div>
             <input type="hidden" name="oid" value="00DU0000000Kwch">
