--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -13,7 +13,7 @@
     </div>
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
     <form accept-charset="UTF-8" class="form" target="form-response"
-     action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post"
+     action="https://{model.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post"
      if="model.titles">
         <div class="text-content">
             <div>
