--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -4,7 +4,6 @@
 button,
 .btn {
     background-color: color(neutral-medium);
-    border: 0;
     color: color(neutral-light);
     cursor: pointer;
     display: inline-block;
@@ -16,6 +15,11 @@ button,
     text-transform: uppercase;
     touch-action: manipulation;
     transition: all 0.2s ease-in-out;
+
+    &:focus {
+        border-radius: 0.3rem;
+        box-shadow: 0 0 5px 3px rgba(color(cyan), 0.7);
+    }
 
     &:hover,
     &:focus {
