Give and Subjects

--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -447,9 +447,12 @@
                     <div class="amount-boxes">
                         <form class="preform">
                             <div class="box-row">
-                                <div each="amount in model.amounts"
-                                 class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}"
-                                 data-value="{amount}">${amount}</div>
+                                <div each="amount in model.amounts" data-value="{amount}"
+                                    class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}"
+                                    aria-role="button" aria-pressed="{model.selectedAmount === +amount}"
+                                    tabindex="0">
+                                    ${amount}
+                                 </div>
                                 <input type="number"
                                  class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}"
                                  placeholder="Other amount" min="5" value="{model.otherAmount}"/>
