--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -3,28 +3,34 @@
         <div class="submenu {model.submenu}">
             <div class="pdf-submenu">
                 <h3>Choose PDF</h3>
-                <a class="btn" href="{model.hiRes}">High Resolution</a>
+                <a class="btn" href="{model.hiRes}"
+                    tabindex="{model.submenu === 'pdf' ? 0 : -1}">High Resolution</a>
                 <p>Better images, but a large file and a longer download time</p>
                 <if condition="model.loRes">
-                    <a class="btn" href="{model.loRes}">Low Resolution</a>
+                    <a class="btn" href="{model.loRes}"
+                        tabindex="{model.submenu === 'pdf' ? 0 : -1}">Low Resolution</a>
                     <p>Same content and shorter download, but some lower resolution images</p>
                 <else>
                     <p>Low resolution not available</p>
                 </if>
-                <div class="remover"><i class="fa fa-times" aria-hidden="true"></i></div>
+                <div class="remover" aria-role="button"><i class="fa fa-times" aria-hidden="true"
+                    tabindex="{model.submenu === 'pdf' ? 0 : -1}"></i></div>
             </div>
             <div class="print-submenu">
                 <h3>Place an Order</h3>
                 <p if="model.bookstore.link">
-                    <a href="{model.bookstore.link}" class="btn">Bookstore Orders</a>
+                    <a href="{model.bookstore.link}" class="btn"
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Bookstore Orders</a>
                     Order through NACSCORP
                 </p>
                 <p if="model.isHighSchool">
-                    <a href="/bulk-order?{model.slug}" class="btn">Bulk Orders</a>
+                    <a href="/bulk-order?{model.slug}" class="btn"
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Bulk Orders</a>
                     Fill out our form to order in bulk for your school.
                 </p>
                 <p if="model.amazon.link">
-                    <a href="{model.amazon.link}" class="btn">Individual Orders</a>
+                    <a href="{model.amazon.link}" class="btn"
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Individual Orders</a>
                     {model.amazon.price} from seller \"OpenStax\" on Amazon
                 </p>
                 <div if="!model.bookstore.link && model.bookstore.comingSoon" class="coming-soon-wrapper">
@@ -35,37 +41,43 @@
                     <img class="coming-soon" src="/images/subjects/coming-soon.svg" />
                     INDIVIDUAL ORDERS
                 </div>
-                <div class="remover"><i class="fa fa-times" aria-hidden="true"></i></div>
+                <div class="remover" aria-role="button"
+                    tabindex="{model.submenu === 'print' ? 0 : -1}"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
         </div>
         <div class="options">
             <div if="!model.comingSoon && model.webviewLink" class="option">
-                <a href="{model.webviewLink}">
+                <a href="{model.webviewLink}"
+                    tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
                     <span class="fa fa-laptop"></span>
                     View online
                 </a>
             </div>
             <div if="model.conceptCoachLink" class="option">
-                <a href="{model.conceptCoachLink}">
+                <a href="{model.conceptCoachLink}"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-mortar-board"></span>
                     View Concept Coach version online
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
-                <a role="button" href="{model.pdfLink}" class="show-pdf-submenu">
+                <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-cloud-download"></span>
                     Download a PDF
                     <if condition="model.comingSoon">{' sample'}</if>
                 </a>
             </div>
             <div if="model.printLink" class="option">
-                <a href="{model.printLink}" class="show-print-submenu">
+                <a href="{model.printLink}" class="show-print-submenu"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-book"></span>
                     Order a print copy
                 </a>
             </div>
             <div if="model.bookshareLink" class="option">
-                <a href="{model.bookshareLink}">
+                <a href="{model.bookshareLink}"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-volume-up"></span>
                     Bookshare
                 </a>
@@ -76,15 +88,18 @@
                         <span class="fa fa-tablet"></span>
                         Download on iBooks
                     </span>
-                    <a href="{model.ibookLink}">
+                    <a href="{model.ibookLink}"
+                        tabindex="{model.submenu === '' ? 0 : -1}">
                         Part 1
                     </a>
-                    <a href="{model.ibookLink2}">
+                    <a href="{model.ibookLink2}"
+                        tabindex="{model.submenu === '' ? 0 : -1}">
                         Part 2
                     </a>
                 </div>
                 <div if="!model.ibookLink2" class="option">
-                    <a href="{model.ibookLink}">
+                    <a href="{model.ibookLink}"
+                        tabindex="{model.submenu === '' ? 0 : -1}">
                         <span class="fa fa-tablet"></span>
                         Download on iBooks
                     </a>
