--- a/src/app/pages/subjects/book-viewer/category-section/book/book.html
+++ b/src/app/pages/subjects/book-viewer/category-section/book/book.html
@@ -1,9 +1,10 @@
 <template args="model">
-    <h3><img src="{model.coverUrl}" alt="{model.title}"></h3>
+    <h3><img src="{model.coverUrl}" alt="{model.title}" tabindex="0"></h3>
     <div class="details {model.detailsOpenClass}">
         <div class="get-this-title-container" skip="true"></div>
         <div class="cta">
-            <a href="/details/{model.slug}" class="btn">details & resources</a>
+            <a href="/details/{model.slug}" class="btn"
+                tabindex="{model.detailsOpenClass ? 0 : -1}">details & resources</a>
         </div>
     </div>
 </template>
