--- a/src/app/components/form-select/form-select.html
+++ b/src/app/components/form-select/form-select.html
@@ -3,7 +3,7 @@
     <span data-html="labelHtml" skip="true"></span>
     <span if="model.instructions" class="select-instructions">{' ' + model.instructions}</span>
     <span class="invalid-message">{model.validationMessage(model.name)}</span>
-    <div class="proxy-select" skip="true"></div>
+    <div class="proxy-select" tabindex="0" skip="true"></div>
     <select name="{model.name}"
      multiple="{model.multiple ? '' : null}" required="{model.required ? '' : null}"
      placeholder="{model.placeholder}"
