--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -4,6 +4,7 @@
 [aria-role="button"],
 button,
 .btn {
+    border: 0;
     cursor: pointer;
     display: inline-block;
     touch-action: manipulation;
