Use keycode lookup table

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -9,7 +9,7 @@
                         tabindex="0"><span>Table of Contents</span></a>
                         <div class="table-of-contents {model.tocIsOpen ? '' : 'hidden'}">
                             <div class="box mac-scroll">
-                                <div class="toc-remover"><i class="fa fa-times" aria-hidden="true"></i></div>
+                                <div class="toc-remover" tabindex="0"><i class="fa fa-times" aria-hidden="true"></i></div>
                                 <table-of-contents skip="true"></table-of-contents>
                             </div>
                         </div>
