Keyboard navigation fixes

--- a/src/app/components/select/select.scss
+++ b/src/app/components/select/select.scss
@@ -121,7 +121,7 @@ select {
         overflow-y: scroll;
         padding: 0;
         position: absolute;
-        top: 4.8rem;
+        top: 100%;
         width: 100%;
         z-index: 1;
 
